Fix inline code elements not wrapping on mobile
On iOS I saw the Lintje 0.8 page was wider than it should be because a
long path did not get broken up over multiple lines. Adding
`word-wrap: anywhere` fixes that.

--- a/frontend/styles/code.scss
+++ b/frontend/styles/code.scss
@@ -16,8 +16,10 @@ pre {
 p code,
 li > code {
   display: inline-block;
-  color: var(--code-inline-color);
   padding: 0 4px;
+
+  color: var(--code-inline-color);
+  word-wrap: anywhere;
   background-color: var(--code-inline-background);
   border-radius: var(--border-radius-tiny);
 }
